--- a/main.css
+++ b/main.css
@@ -24,6 +24,10 @@ nav div.menu-icon {
   float: left;
 }
 
+.nav-btn svg {
+  display: none;
+}
+
 li {
   list-style: none;
 }
@@ -471,15 +475,22 @@ MEDIA QUERIES
   
   .main-header  {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
+    height: 170px;
+  }
+  
+  .nav-btn svg {
+    width: 40px;
+    height: 40px;
+    display: block;
+    float: left;
+    margin-top: 10px;
+    margin-left: 20px;
   }
   
   .banner {
-    background-image: none;
-    background-color: red;
-    height: 0;
-    margin: 0;
+    display: none;
   }
   
   .logo {
@@ -487,15 +498,38 @@ MEDIA QUERIES
     margin: auto;
 }
   
+  .main-nav ul {
+    margin: 0;
+    flex-direction: column;
+    justify-content: flex-start;
+    
+    width: 100%;  
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    text-align: center;
+    transform: translateX(-100%);
+    transition: transform 0.6s ease;
+    
+    background-color: #10141f;
+    display: none;
+  }
   
-  li {
-    visibility: hidden;
+   .main-nav-ul.open {
+    transform: translateX(0);
+    transition: transform 0.6s ease;
+  }
+  
+  .item {
+    padding: 20px;
+    display: block;
   }
   
   button {
-    height: 20px;
-    width: 100px;
-    font-size: .7em;
+    height: 30px;
+    width: 150px;
+    font-size: 1em;
   }  
   
   .row {
