fixed typo in .about-img CSS background image url

--- a/main.css
+++ b/main.css
@@ -289,7 +289,7 @@ ABOUT PAGE
 .about-img {
   width: 40%;
   float: right;
-  background-image: url('../img/Drums Boy.jpg');
+  background-image: url('../img/Drums boy.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   max-width: 100%;
